# Civilization-in-Space-Nasa-Space-App-Challenge

./: DEMO_VIDEO_SCRIPT.md  FRONTEND_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  problem_statement.md  test_implementation.py
frontend/: ABSOLUTE_FINAL_INSTRUCTIONS.txt  CACHE_CLEAR_STEPS.txt  COLOR_UPGRADE_PROFESSIONAL.md  DEMO_README.md  FINAL_PROFESSIONAL_AND_SCIENTIFIC.txt  FINAL_RESTART_INSTRUCTIONS.md  FIX_NOW.txt  JUDGES_GUIDE.md  MENTOR_APPROVAL_READY.md  OTHER_SCIENTIFIC_CONSIDERATIONS.md  PROFESSIONAL_COLORS_APPLIED.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RESTART_APP.md  RESTART_FOR_PROFESSIONAL.txt  SCIENTIFIC_ACCURACY_FIXES.md  START_APP_NOW.md  START_HERE_README.txt  STYLING_FIXED.md  STYLING_ISSUE_RESOLVED.md  ULTRA_PROFESSIONAL_COLORS.md  VISUAL_COMPARISON_GUIDE.md  YOU_NEED_TO_RESTART.txt  fix-styling.ps1  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: AllSensorsPanel.tsx  DecisionLayerPanel.tsx  MissionControlPanel.tsx  SensorDashboard.tsx  SiteAnalysisPanel.tsx  SiteComparison.tsx  TerrainMap.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/utils/: mockDataService.ts
lunabot_ws/: PROJECT_STATUS.md  README.md  install_dependencies.py
lunabot_ws/public data/: sensor_data.csv
lunabot_ws/src/lunabot_navigation/: CMakeLists.txt  package.xml
lunabot_ws/src/lunabot_navigation/config/: lunabot_view.rviz  mapper_params_online_async.yaml  nav2_params.yaml
lunabot_ws/src/lunabot_navigation/controllers/lunabot_controller/: lunabot_controller.py
lunabot_ws/src/lunabot_navigation/launch/: lunabot_complete.launch.py  lunabot_simulation.launch.py  navigation.launch.py
lunabot_ws/src/lunabot_navigation/maps/: lunar_habitat.yaml
lunabot_ws/src/lunabot_navigation/scripts/: ai_decision_engine.py  cost_estimator.py  demo_controller.py  habitat_monitor.py  habitat_site_analyzer.py  lunabot_controller.py  maintenance_patrol.py  navigation_controller.py  sensor_fusion_node.py  websocket_bridge.py
lunabot_ws/src/lunabot_navigation/urdf/: lunabot.urdf.xacro
lunabot_ws/src/lunabot_navigation/worlds/: .luna.wbproj  lunar_habitat.wbt  lunar_habitat.world
lunabot_ws/src/lunabot_navigation/worlds/protos/: RectangleArena.proto  SolidBox.proto  TexturedBackground.proto  TexturedBackgroundLight.proto  WoodenBox.proto
lunabot_ws/worlds/: .lumabott.wbproj  Lunabot.wbt
